--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -49,7 +49,19 @@
     "filters": "Filters",
     "price": "Price",
     "add_to_cart": "Add to Cart",
-    "confirm_delete": "Are you sure you want to delete this product?"
+    "confirm_delete": "Are you sure you want to delete this product?",
+    "sold_by": "Sold by",
+    "contact_seller": "Contact Seller",
+    "ask_placeholder": "Ask a question or leave a review...",
+    "post_comment": "Post Comment",
+    "comments_title": "Comments & Questions",
+    "login_to_comment": "Please {link} to leave a comment.",
+    "login_link": "log in",
+    "no_comments": "No comments yet. Be the first to ask!",
+    "save": "Save",
+    "cancel": "Cancel",
+    "edit": "Edit",
+    "delete": "Delete"
   },
   "auth": {
     "signin_title": "Sign in to your account",
